Fix sending autofill votes for sign-in forms.

On CL https://codereview.chromium.org/2796873002/ a sending of autofill votes for sing-in forms was implemented, but |available_field_types_| doesn't contain PASSWORD type, that makes that the server skips such forms as invalid. This CL adds PASSWORD type for sign-in form uploads.

BUG=713688, 699530

Review-Url: https://codereview.chromium.org/2830303002
Cr-Commit-Position: refs/heads/master@{#466621}

Former-commit-id: 2366977b83a1eb2ce167821d7d1d9e084bd602fc